[metadata]
name = msdss-users-api
version = 0.0.0
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = User management API for the Modular Spatial Decision Support Systems (MSDSS) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/msdss-users-api
project_urls =
    Bug Tracker = https://github.com/rrwen/msdss-users-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
install_requires = 
    msdss-base-api
    msdss-base-api-security
    msdss-base-database
python_requires = >=3.8

[options.extras_require]
postgresql = msdss-base-database[postgresql]
mysql = msdss-base-database[mysql]
sqlite = pmsdss-base-database[sqlite]

[options.packages.find]
where = src