[metadata]
name = msdss-users-api
version = 0.0.0
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = User management API for the Modular Spatial Decision Support Systems (MSDSS) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/msdss-users-api
project_urls =
    Bug Tracker = https://github.com/rrwen/msdss-users-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
install_requires = 
    msdss-base-api
    msdss-base-database
    fastapi-users[sqlalchemy]
python_requires = >=3.8

[options.extras_require]
postgresql = databases[postgresql]
mysql = databases[mysql]
sqlite = databases[sqlite]

[options.packages.find]
where = src